Show the index type even for indexes using the default index type in tables that support multiple index types. (Bug #7235)