sql/sql_show.cc
@@ -1406,14 +1406,18 @@ store_create_info(THD *thd, TABLE *table, String *packet)
     if (!(thd->variables.sql_mode & MODE_NO_KEY_OPTIONS) &&
 	!limited_mysql_mode && !foreign_db_mode)
     {
-      if (table->db_type == DB_TYPE_HEAP &&
-	  key_info->algorithm == HA_KEY_ALG_BTREE)
+      if (key_info->algorithm == HA_KEY_ALG_BTREE)
 	packet->append(" TYPE BTREE", 11);
+      
+      if (key_info->algorithm == HA_KEY_ALG_HASH)
+	packet->append(" TYPE HASH", 10);
       
       // +BAR: send USING only in non-default case: non-spatial rtree
       if ((key_info->algorithm == HA_KEY_ALG_RTREE) &&
 	  !(key_info->flags & HA_SPATIAL))
 	packet->append(" TYPE RTREE", 11);
+
+      // No need to send TYPE FULLTEXT, it is sent as FULLTEXT KEY
     }
     packet->append(" (", 2);
 
